// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Target: Browser: Dev comments 1`] = `
"import _camelCase from \\"lodash/camelCase\\";

function translate(value) {
  return _camelCase(value);
}"
`;

exports[`Target: Browser: Dev deadcode 1`] = `
"const STATIC = false;
before();
after();"
`;

exports[`Target: Browser: Dev es2015: classes 1`] = `
"export class Component extends Other {
  constructor() {
    super();
    this.flag = true;
  }

  main() {
    alert(this.foo);
  }

}"
`;

exports[`Target: Browser: Dev es2015: for_off 1`] = `
"function test() {
  for (const taskName of tasks) {
    try {
      executeCommands();
    } catch (error) {
      console.error(\\"Error\\");
    }
  }
}"
`;

exports[`Target: Browser: Dev es2015: generator 1`] = `
"function* idMaker() {
  var index = 0;

  while (true) yield index++;
}"
`;

exports[`Target: Browser: Dev es2015: set 1`] = `
"import \\"core-js/modules/web.dom.iterable\\";
new Set([1, 2, 3]);"
`;

exports[`Target: Browser: Dev es2016: exponentiation 1`] = `"var result = 2 ** 3;"`;

exports[`Target: Browser: Dev esnext: async 1`] = `
"async function wait() {
  await loadData();
}"
`;

exports[`Target: Browser: Dev esnext: async_loop 1`] = `
"async function executeTasks(tasks) {
  for (const taskName of tasks) {
    try {
      await executeCommands();
    } catch (error) {
      console.error(\\"Error\\");
    }
  }
}"
`;

exports[`Target: Browser: Dev esnext: class properties 1`] = `
"import _defineProperty from \\"@babel/runtime/helpers/builtin/es6/defineProperty\\";
export class Component {
  constructor() {
    _defineProperty(this, \\"onClick\\", () => {});
  }

}"
`;

exports[`Target: Browser: Dev esnext: dynamic import 1`] = `
"import(
/*webpackChunkName:'lodash-wBYk8'*/
\\"lodash\\").then(lodash => {
  console.log(lodash.camelCase(\\"hello world\\"));
});"
`;

exports[`Target: Browser: Dev esnext: object spread 1`] = `
"import _objectSpread from \\"@babel/runtime/helpers/builtin/es6/objectSpread\\";

let original = {
  bar: 10
},
    variant = _objectSpread({
  foo: 1
}, original);"
`;

exports[`Target: Browser: Dev loadable 1`] = `
"import loadable from 'loadable-components';
export const Home = loadable(() => import(
/*webpackChunkName:'Home-JfPYC'*/
\\"./views/Home\\"), {
  modules: [\\"./views/Home\\"]
});
export const About = loadable(() => import(
/*webpackChunkName:'About-8yDxR'*/
\\"./views/About\\"), {
  modules: [\\"./views/About\\"]
});
export const Contact = loadable(() => import(
/*webpackChunkName:'Contact-AIf6m'*/
\\"./views/Contact\\"), {
  modules: [\\"./views/Contact\\"]
});"
`;

exports[`Target: Browser: Dev loadable magic-comments 1`] = `
"import loadable from 'loadable-components';
export const Home = loadable(() => import(
/*webpackChunkName:'Home-JfPYC'*/
\\"./views/Home\\"), {
  modules: [\\"./views/Home\\"]
});
export const About = loadable(() => import(
/* webpackChunkName: \\"About\\" */
\\"./views/About\\"), {
  modules: [\\"./views/About\\"]
});
export const Contact = loadable(() => import(
/*webpackMode:'lazy',webpackFoo:'bar',webpackChunkName:'Contact-AIf6m'*/
\\"./views/Contact\\"), {
  modules: [\\"./views/Contact\\"]
});"
`;

exports[`Target: Browser: Dev loadable wildcard 1`] = `
"import loadable from 'loadable-components';
const page = \\"About\\",
      lang = \\"de_DE\\";
export const views = loadable(() => import(
/*webpackChunkName:'views-[request]-q9bqd'*/
\`./views/\${page}\`), {
  modules: [\`./views/\${page}\`]
});
export const leanIntl = loadable(() => import(
/*webpackChunkName:'lean-intl-[request]-ucOqv'*/
\`./lean-intl/\${lang}/data\`), {
  modules: [\`./lean-intl/\${lang}/data\`]
});
export const reactIntl = loadable(() => import(
/*webpackChunkName:'react-intl-[request]-owXpv'*/
\`./react-intl/\${lang}/data\`), {
  modules: [\`./react-intl/\${lang}/data\`]
});"
`;

exports[`Target: Browser: Dev lodash: async 1`] = `
"import _parallel from \\"async/parallel\\";

_parallel([]);"
`;

exports[`Target: Browser: Dev lodash: lodash 1`] = `
"import _camelCase from \\"lodash/camelCase\\";

_camelCase(\\"hello world\\");"
`;

exports[`Target: Browser: Dev lodash: recompose 1`] = `
"import _compose from \\"recompose/compose\\";

_compose([]);"
`;

exports[`Target: Browser: Dev react: jsx 1`] = `
"function render() {
  return React.createElement(\\"h1\\", null, \\"Hello\\");
}"
`;

exports[`Target: Browser: Dev react: jsx spread 1`] = `
"function render(props) {
  return React.createElement(\\"h1\\", Object.assign({
    className: \\"large\\"
  }, props), \\"Hello\\");
}"
`;

exports[`Target: Browser: Dev react: proptypes 1`] = `
"import React from \\"react\\";
import PropTypes from \\"prop-types\\";

class MyComponent extends React.Component {
  render() {
    return React.createElement(\\"div\\", null, this.props.userName);
  }

}

MyComponent.propTypes = {
  userName: PropTypes.string
};"
`;
